--- a/src/pages/kierunki/administracja/index.astro
+++ b/src/pages/kierunki/administracja/index.astro
@@ -118,5 +118,5 @@ const seoKeywords = ["pisanie prac magisterskich z administracji", "praca magist
     </div>
   </section>
 
-  <CTA title="Napisz swoją pracę magisterską z administracji już teraz" subtitle="Skorzystaj z pomocy AI i stwórz profesjonalną analizę administracji publicznej." />
+  <CTA title="Napisz swoją pracę magisterską z administracji już teraz" subtitle="Skorzystaj z pomocy AI i wygeneruj pracę magisterską z administracji publicznej." />
 </Layout>
