--- a/src/pages/kierunki/bezpieczenstwo/index.astro
+++ b/src/pages/kierunki/bezpieczenstwo/index.astro
@@ -191,5 +191,5 @@ const seoKeywords = ["pisanie prac magisterskich z bezpieczeństwa", "praca magi
     </div>
   </section>
 
-  <CTA title="Napisz swoją pracę magisterską z bezpieczeństwa już teraz" subtitle="Skorzystaj z pomocy AI i stwórz profesjonalną analizę zagrożeń." />
+  <CTA title="Napisz swoją pracę magisterską z bezpieczeństwa już teraz" subtitle="Skorzystaj z pomocy AI i wygeneruj pracę magisterską z bezpieczeństwa." />
 </Layout>
