--- a/src/pages/kierunki/filologia-polska/index.astro
+++ b/src/pages/kierunki/filologia-polska/index.astro
@@ -128,5 +128,5 @@ const seoKeywords = ["pisanie prac magisterskich z filologii polskiej", "praca m
     </div>
   </section>
 
-  <CTA title="Napisz swoją pracę magisterską z polonistyki już teraz" subtitle="Skorzystaj z pomocy AI i stwórz profesjonalną analizę literacką." />
+  <CTA title="Napisz swoją pracę magisterską z polonistyki już teraz" subtitle="Skorzystaj z pomocy AI i wygeneruj pracę magisterską z filologii polskiej" />
 </Layout>
