--- a/src/pages/kierunki/index.astro
+++ b/src/pages/kierunki/index.astro
@@ -25,7 +25,7 @@ const categories = [
   },
   {
     name: 'Ekonomia i biznes',
-    subjects: subjects.filter(s => ['ekonomia', 'zarzadzanie', 'finanse', 'marketing', 'logistyka'].includes(s.slug))
+    subjects: subjects.filter(s => ['ekonomia', 'zarzadzanie', 'marketing', 'logistyka'].includes(s.slug))
   },
   {
     name: 'Humanistyka',
