--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@ const kierunkiCol1 = [
 ];
 
 const kierunkiCol2 = [
-  { href: '/kierunki/historia', label: 'Historia' },
+  //{ href: '/kierunki/historia', label: 'Historia' },
   { href: '/kierunki/informatyka', label: 'Informatyka' },
   { href: '/kierunki/kulturoznawstwo', label: 'Kulturoznawstwo' },
   { href: '/kierunki/logistyka', label: 'Logistyka' },
