--- a/src/pages/kierunki/index.astro
+++ b/src/pages/kierunki/index.astro
@@ -29,7 +29,7 @@ const categories = [
   },
   {
     name: 'Humanistyka',
-    subjects: subjects.filter(s => ['filologia-polska', 'filologia-angielska', 'historia'].includes(s.slug))
+    subjects: subjects.filter(s => ['filologia-polska', 'filologia-angielska'].includes(s.slug))
   },
   {
     name: 'Nauki ścisłe i techniczne',
