--- a/src/pages/kierunki/informatyka/index.astro
+++ b/src/pages/kierunki/informatyka/index.astro
@@ -209,5 +209,5 @@ const seoKeywords = ["pisanie prac magisterskich z informatyki", "praca magister
     </div>
   </section>
 
-  <CTA title="Napisz swoją pracę magisterską z informatyki już teraz" subtitle="Skorzystaj z pomocy AI i stwórz profesjonalną dokumentację projektu IT." />
+  <CTA title="Napisz swoją pracę magisterską z informatyki już teraz" subtitle="Skorzystaj z pomocy AI i wygeneruj pracę magisterską z informatyki." />
 </Layout>
