--- a/src/pages/kierunki/logistyka/index.astro
+++ b/src/pages/kierunki/logistyka/index.astro
@@ -118,5 +118,5 @@ const seoKeywords = ["pisanie prac magisterskich z logistyki", "praca magistersk
     </div>
   </section>
 
-  <CTA title="Napisz swoją pracę magisterską z logistyki już teraz" subtitle="Skorzystaj z pomocy AI i stwórz profesjonalną analizę procesów logistycznych." />
+  <CTA title="Napisz swoją pracę magisterską z logistyki już teraz" subtitle="Skorzystaj z pomocy AI i wygeneruj pracę magisterską z logistyki." />
 </Layout>
