--- a/src/pages/kierunki/marketing/index.astro
+++ b/src/pages/kierunki/marketing/index.astro
@@ -209,5 +209,5 @@ const seoKeywords = ["pisanie prac magisterskich z marketingu", "praca magisters
     </div>
   </section>
 
-  <CTA title="Napisz swoją pracę magisterską z marketingu już teraz" subtitle="Skorzystaj z pomocy AI i stwórz profesjonalną analizę marketingową." />
+  <CTA title="Napisz swoją pracę magisterską z marketingu już teraz" subtitle="Skorzystaj z pomocy AI i wygeneruj pracę magisterską z marketingu." />
 </Layout>
