--- a/src/pages/kierunki/pedagogika/index.astro
+++ b/src/pages/kierunki/pedagogika/index.astro
@@ -464,5 +464,5 @@ const seoKeywords = ["pisanie prac magisterskich z pedagogiki", "praca magisters
     </div>
   </section>
 
-  <CTA title="Napisz swoją pracę magisterską z pedagogiki już teraz" subtitle="Skorzystaj z pomocy AI i stwórz profesjonalną pracę z rekomendacjami praktycznymi." />
+  <CTA title="Napisz swoją pracę magisterską z pedagogiki już teraz" subtitle="Skorzystaj z pomocy AI i wygeneruj pracę magisterską z pedagogiki." />
 </Layout>
