--- a/src/pages/kierunki/pielegniarstwo/index.astro
+++ b/src/pages/kierunki/pielegniarstwo/index.astro
@@ -191,5 +191,5 @@ const seoKeywords = ["pisanie prac magisterskich z pielęgniarstwa", "praca magi
     </div>
   </section>
 
-  <CTA title="Napisz swoją pracę magisterską z pielęgniarstwa już teraz" subtitle="Skorzystaj z pomocy AI i stwórz profesjonalną pracę badawczą." />
+  <CTA title="Napisz swoją pracę magisterską z pielęgniarstwa już teraz" subtitle="Skorzystaj z pomocy AI i wygeneruj pracę magisterską z pielęgniarstwa." />
 </Layout>
