--- a/src/pages/kierunki/politologia/index.astro
+++ b/src/pages/kierunki/politologia/index.astro
@@ -191,5 +191,5 @@ const seoKeywords = ["pisanie prac magisterskich z politologii", "praca magister
     </div>
   </section>
 
-  <CTA title="Napisz swoją pracę magisterską z politologii już teraz" subtitle="Skorzystaj z pomocy AI i stwórz profesjonalną analizę politologiczną." />
+  <CTA title="Napisz swoją pracę magisterską z politologii już teraz" subtitle="Skorzystaj z pomocy AI i wygeneruj pracę magisterską z politologii." />
 </Layout>
