--- a/src/pages/kierunki/prawo/index.astro
+++ b/src/pages/kierunki/prawo/index.astro
@@ -239,5 +239,5 @@ const seoKeywords = ["pisanie prac magisterskich z prawa", "praca magisterska z 
     </div>
   </section>
 
-  <CTA title="Napisz swoją pracę magisterską z prawa już teraz" subtitle="Skorzystaj z pomocy AI i stwórz profesjonalną analizę prawniczą." />
+  <CTA title="Napisz swoją pracę magisterską z prawa już teraz" subtitle="Skorzystaj z pomocy AI i wygeneruj pracę magisterską z prawa." />
 </Layout>
