--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -109,7 +109,7 @@ const seoKeywords = [
     "@type": "WebPage",
     "name": "Pisanie prac magisterskich z AI",
     "description": seoDescription,
-    "url": "https://prace-magisterskie.pl",
+    "url": "https://www.prace-magisterskie.pl",
     "mainEntity": {
       "@type": "Service",
       "name": "Pisanie prac magisterskich",
