--- a/src/pages/kierunki/index.astro
+++ b/src/pages/kierunki/index.astro
@@ -234,7 +234,7 @@ const categories = [
     "itemListElement": subjects.map((subject, index) => ({
       "@type": "ListItem",
       "position": index + 1,
-      "url": `https://prace-magisterskie.pl/kierunki/${subject.slug}`,
+      "url": `https://www.prace-magisterskie.pl/kierunki/${subject.slug}`,
       "name": `Pisanie prac magisterskich z ${subject.name.toLowerCase()}`
     }))
   })} />
